--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,9 @@
     <noscript>
       <strong>We're sorry but prot-vue-table doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
+    <div id="app">
+      <prot-table-wrapper id="prot1"></prot-table-wrapper>
+    </div>
     <br>
     <div id="app2"></div>
     <!-- <div id="app2" data_url="data.json" options='{
