added headerDef with displayNames and fixedWidth

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,30 @@
         prot_table.data_url = 'data.json';
         prot_table.table_options = {
           'height': '600px',
+          'headerDef': {
+            'index': {
+              'displayName': 'Index',
+              'fixWidth': '300px'
+            },
+            'isActive': {
+              'displayName': 'Aktiv',
+            },
+            'first': {
+              'displayName': 'Vorname',
+            },
+            'last': {
+              'displayName': 'Nachname',
+            },
+            'company': {
+              'displayName': 'Firma',
+            },
+            'address': {
+              'displayName': 'Adresse',
+            },
+            'phone': {
+              'displayName': 'Telefon',
+            },
+          }
         }
       //   JSON.stringify([
       //     {
