changed formatter apply order; switched from using border for cell separation to grid gap;

--- a/public/web-component.html
+++ b/public/web-component.html
@@ -34,7 +34,8 @@
           }],
           'colStyles': {'address': {'text-align': 'right'}},
           'formatter': {
-            'index': (value) => ((value < 10) ? `0${value}` : value),
+            '#all': (value) => (`<span style="color: green">${value}</span>`),
+            'Artikelnummer': (value) => (`<span style="color: red">${value}</span>`),
             'isActive': (value) => ((value) ? 'yes' : 'no'),
             'address': (value) => ((value) ? value.split(',').map( token => ((token.match(/\s[0-9]{3,4}/gm) ? `<span style="color: red;">${token}</span>` : token))).join(',') : '')
           },
