included column selection via dropdown; column link save; column default via props;

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
           'height': '600px',
           
         }
+        prot_table.display_options = 'eyJzb3J0QnkiOlt7ImNvbCI6Ik1FSyIsImRpciI6ImRlc2MifSx7ImNvbCI6Ik1hdGNoY29kZSIsImRpciI6ImRlc2MifV0sImZpbHRlckJ5Ijp7IlZlcmb8Z2JhcmtlaXQiOiIvMjAvZ2ltIn0sImhpZGVDb2x1bW5zIjpbIlIiLCJQIiwiViIsIkUiXX0='
       //   JSON.stringify([
       //     {
       //       "_id": "5bbd026039520dabb1a14e06",
